--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 * {
-    background: pink;
+    margin: 0;
+    padding: 0;
+    font-family: "poppins", sans-serif;
+    box-sizing: border-box;
 }
