--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@
     font-family: "poppins", sans-serif;
     box-sizing: border-box;
 }
+.container {
+    width: 100%;
+    height: 100vh;
+    background: #ffe3e3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
