--- a/style.css
+++ b/style.css
@@ -11,4 +11,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+}
+.container img {
+    width: 75%;
+    
 }
