--- a/style.css
+++ b/style.css
@@ -15,5 +15,14 @@
 }
 .container img {
     width: 75%;
-    
+}
+.container h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 90px;
+    font-weight: 600;
+    letter-spacing: 3px;
 }
