--- a/style.css
+++ b/style.css
@@ -26,3 +26,12 @@
     font-weight: 600;
     letter-spacing: 3px;
 }
+.quotes {
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    bottom: 15%;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+}
