customized quotes h2 styling to better match the look in the tutorial

--- a/style.css
+++ b/style.css
@@ -35,3 +35,9 @@
     font-size: 20px;
     font-weight: 500;
 }
+.quotes h2 {
+    font-size: 45px;
+    margin-top: 10px;
+    padding-bottom: 40px;
+    font-weight: 575;
+}
